--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ distro==1.4.0
 Django==3.1
 django-environ==0.4.5
 django-extensions==3.0.4
+django-material-admin==1.7.8
 djangorestframework==3.11.1
 html5lib==1.0.1
 idna==2.8
