Renamed to "ElleEmmeDDT"

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,14 +1,14 @@
 [uwsgi]
 http = 0.0.0.0:8000
 chdir = /app
-module = easy_ddt_backend.wsgi
+module = elle_emme_ddt_backend.wsgi
 static-map = /static=/app/STATIC
 log-date = true
 vacuum = true
 max-requests = 5000
 auto-procname = true
 enable-threads = true
-procname-prefix-spaced = easy_ddt_backend
+procname-prefix-spaced = elle_emme_ddt_backend
 touch-reload = %p
 harakiri-verbose = true
 thunder-lock
