--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     # command: ./run.sh
     command: ./manage.py runserver 0.0.0.0:8000
     env_file:
-      ./easy_ddt_backend/.env
+      ./elle_emme_ddt_backend/.env
     volumes:
       - .:/app
     ports:
@@ -16,7 +16,7 @@ services:
   db:
     image: postgres:12.3-alpine
     env_file:
-      ./easy_ddt_backend/.env
+      ./elle_emme_ddt_backend/.env
     volumes:
       - pg_data:/var/lib/postgresql/data
       - pg_backups:/pg_backups
