--- a/requirements.txt
+++ b/requirements.txt
@@ -14,14 +14,17 @@ django-environ==0.4.5
 django-extensions==3.0.4
 django-material-admin==1.7.8
 djangorestframework==3.11.1
+et-xmlfile==1.0.1
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
 ipython==7.17.0
 ipython-genutils==0.2.0
+jdcal==1.4.1
 jedi==0.17.2
 lockfile==0.12.2
 msgpack==0.6.2
+openpyxl==3.0.4
 packaging==20.3
 parso==0.7.1
 pep517==0.8.2
@@ -40,6 +43,7 @@ requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 sqlparse==0.3.1
+toml==0.10.1
 traitlets==4.3.3
 urllib3==1.25.8
 uWSGI==2.0.19.1
